--- a/ShellEco/app/build.gradle
+++ b/ShellEco/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.eco.shell.shelleco01"
         minSdkVersion 15
